--- a/view/InvoiceList.view.xml
+++ b/view/InvoiceList.view.xml
@@ -6,7 +6,12 @@ controllerName="sap.ui.demo.walkthrough.controller.InvoiceList"
         id="invoiceList"
       class="sapUiResponsiveMargin"
       width="auto"
-      items="{invoice>/Invoices}" >
+      items="{
+         path : 'invoice>/Invoices',
+         sorter : {
+            path : 'ProductName' 
+         }
+      }" >
       <headerToolbar>
          <Toolbar>
             <Title text="{i18n>invoiceListTitle}"/>
